--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "TwitchLib.Unity.Shared"]
 	path = TwitchLib.Unity.Shared
 	url = https://github.com/RRickkert/TwitchLib.Unity.Shared.git
+[submodule "TwitchLib.Api"]
+	path = TwitchLib.Api
+	url = https://github.com/RRickkert/TwitchLib.Api
